--- a/001-where.org
+++ b/001-where.org
@@ -458,33 +458,76 @@ They also agreed to just lay the pieces together, on its side with the top stone
 
 There was no mention from Verk about any possible excused absences from drill for anyone.
 
-Verk had gathered a medium sized crowd into the ancient-speak burrow. The soon-to-be-revealed mineral wonder that the men had to ensure Verk was really there. Verk wanted his own surprise to be genuine and so went along with the men's enthusiasm describing the find, knowing that some attempt at humiliating him was beyond-thought.
+Verk had gathered a medium sized crowd into the ancient-speak burrow. The soon-to-be-revealed mineral wonder that the men had to ensure Verk was really there was still awaiting revelation. Verk wanted his own surprise to be genuine and so went along with the men's enthusiasm in describing the find, knowing that over-selling a thing that turned out to be a disappointment for him is something the two boys would include in their calculations.
 
-On the off chance that this was to be underwhelming, Verk tempered his urge to invite the whole clan. He could always claim that, "While exiting, we needn't bother the children with the overwhelming wonders of science[fn:: xxx hmm] until a group of /distinguished/ adults had a good examination of it first."
+On the off chance that this was to be underwhelming, Verk tempered his urge to invite the whole clan. He could always claim that, "While exiting, we needn't bother the children with the overwhelming wonders of science[fn:: For most Crec, science just meant 'pretty cool, but in a smart way.'] until a group of /distinguished/ adults had a good examination of it first."
 
-All invited were present, introductory remarks made, grateful nods made towards Grav and Gog throughout. The quiet chatter among the adults, some giddy, had died down rapidly with a small just a small change in Verk's stance and facial expression.
+All invited were present, introductory remarks made, grateful nods made towards Grav and Gog throughout. The quiet chatter among the adults, some giddy, had died down rapidly with an expert cue from Vert; only a small change in his stance and facial expression.
 
-"It is time, my fellow cavemen.", I sure hope you brought us something grand, Grav and Gog, and thank you for making a gift of this to the xxx.
+"It is time, my fellow cavemen.", I sure hope you brought us something grand, Grav and Gog, and we thank you for having the heart to make a gift of this mysterious find to treasury of The Forest Heroes' Fallen Cavebabies Fund[fn:: This is a fund enjoyable only by Forest military veterans to help with the care (or funeral, as appropriate), should any of their offspring be injured or killed in a fall, which happened very regularly of course.]..
 
-Grav and Gog stood smiling awkwardly. The crowd was too small and close for there to be any idea which direction to face. The felt on display as well, Verk maybe doling out a bit too much praise to keep the boys' sense of obligation at full strength.
+Grav and Gog stood smiling awkwardly. The crowd was too small and close for there to be any idea which direction to face. They felt on display as well, with Verk maybe doling out a bit too much praise to keep the boys' sense of obligation sharp.
 
-]]]] need to have the following happen: Verk makes a big deal out of the generous gem the boys have brought him, gathers all around to bear witness to an act of selflessness toward the Forest[fn:: insert absurd orphans of fallen-something fund.]
-]]]]
-]]]] Upon parting with G&G, Verk says "see you boys at xxx miltary thing xxx and maybe winks."
+Verk did a triple-take with a broad, yellow smile for the clan portraitist and anyone else with a keen memory. He pried the two halves apart with a fine, glittering Sky Clam halve[fn:: These were found on the top of nearby /Mnt. Fish/. No one knew how or why.] and a healthy-looking, tough, thick, velvety leaf which he used to protect the parimiter of the mirror-stone finish he had been assured he would find, among other wonders that he insisted remain a surprise.
 
-## gog/grav have "employees"
-## today is a holiday. /They/ are working. The /Workers/ are Holidaying
+The two men had never felt this kind of intense, surreal terror before. Either their predict-thought was correct, and Verk would not /see/ what was there, or he would immediately see a fine, sparkling, extra-large false-rock-stick that would, should such a thing even exist outside of caveboy talk, be hidden carefully under feet of bat-scat in the very back of one's cave[fn:: Which would keep it quite warm, which no one found out.].
 
->>>> Verk is staying in the burrow two burrows away from Grav and inevitably they meet in the morning xxsomewhere-definitely-no-others-hearxx
+Verk grunted the desperate grunt of the soon-dying and heaved the top halve upward, balancing on the bottom, thick end of the "egg". The top halve slid slightly to warn of its instability. Gog and Grav each picked up the fatter, heavier half, one on each side, and the three men walked it over to one side, setting it down on a blanket of fresh leaves. Gog could see the revealed form, while Grav was walking his share of the heavy half of the egg along, with his head turned, but both men felt the same hopeless terror combined with an oddly sweet giddiness.
 
->>>> Verk is a completely different person in these situations and Grav lets his mind wander to examples, remembers the past. and the perplexity of it.
+"My sweet Ender-Of-Questions, in his hammock above!", Verk covered his open mouth with the fingertips of both hands in a somewhat dainty gesture, and smiled warmly. "It is /astonishing/.", stretching the syllables.
 
->>>> Verk in his almost "evil" demeanor, jabs at Grav as he prepares. Makes finger-fucky insinuations about what he and Gog are going to be doing out in the woods today.
+The men watched Verk shake his head slowly as they wondered which way this was going.
 
->>>> Grav is cool on the outside but red-hot on the inside: he contemplates the tension between "we must publicly worship verk" (and so he cannot even relate this kind of stuff to others) and the sense that he's getting a "talking to" about things he has not done and knows that he's not allowed to defend himself.
+"It's /beautiful/!", Verk paced slowly in a semi-circle as the small crowed, also gazing and cooing, made room for him.
 
->>>> Grav relates horrifying story of younger, stronger Verk going monkey-scat over some trivial thing that Grav said to Verk. It was scary as fuck, and so we relate it as such. Grav was one of all-finger and three years (what is a "year"?) old.
+Verk lifted the smooth, clean, glittering brown crystal from its perfect den and held it up with wonder, letting the soft orange of the late afternoon sun coming from the nearby cave opening reveal all of the object's beautiful, strictly bilateral symmetry with the contrasting powers of well-oriented, bright sun.
 
->>>> And now Grav is traumatized into never disagreeing with Verk either privately or publicly.
+"It looks like /something/...", wondered Verk aloud. "It cannot be other than a message. To comprehend what Ender's-Nature-Force has revealed to us is of the utmost importance. It is a message to us, to the Crec, straight from Its mouth[fn:: "God" was a more abstract being to the Crec than ours is to modern people. Referring to their 'god' as 'it' is in no way a kind of sacrilidge. It is the pronoun to be used. For, Kug, Great Diviner of Recent Messages said in his youth, 'The Crec God has no rock-stick!'. In other words Ender-of-Questions was genderless and what is more, not thought of as 'caveperson-like' in the least. They would find the idea so humorous that, should you some day be able to inquire about theirs, offering a description of your god's nature, a revealing conversation would likely not be possible. Ender-Of-Questions /does/ have a mouth, though.]."
 
->>>> Grav finally breaks free and meets up with Gog for xxx (figure it out). Along the way they meet some interesting characters and generally have a great time. The first person they meet is one of all-finger old at that point we reveal Grav and Gog's age.
+"Indeed Grav and I thought the same thing.", offered Gog.
+
+Verk turned to Gog, "Young buck you may be wise yet.", and smiled with a wink. This was a cue for all present to appreciate Verk's dry wit, which they did with apparent sincerity.
+
+"Let us pass it around the room! Us Under-Men[fn:: An near analog of the modern Japanese 'kouhai', one's social inferior in some given context, in this particular case the speaker was thinking in terms of their shared military experience and shared love of knowledge.] are thirsting of curiosity."
+
+The small crowd of men in the large burrow took turns handling, admiring, indeed caressing the object. There was many quizzacle raised eyebrows[fn:: Being mostly 'biological hardware' in origin, this gesture means the same to pretty much all of humanity and their cousins.] Some of the men, while holding it, managed to quickly have something to say to their neighbor, causing them to just as quickly pass it along. Some made an admiring smile and gave a sideways nod, with raised eyebrows. Those who decided they had something to contribute to the discussion sometimes missed a beat or two in the animated group conversation's rhythm, and stepping in at not quite the right time, said things like...
+
+"Could it be just the front one piece of four of a kind of viper, perhaps?"
+
+"I have seen weapons much like this!"
+
+"Are these not gills, Kvred? Could it be a fish? For it has a kind of small mouth. I have seen a kind of dart-fish that has pronounced dorsal muscles producing in a similar, long, thin snake-meal along the bottom-center.", at which Kvred looked nonplussed, as if to say 'why are you asking me?'.
+
+This contributor, smiling and not looking at the crystal, ran his fingers "down" the "bottom" of the object; some others noticing his unkempt fingernail as it glided slowly along the crystal's surface to point out this structure.
+
+"Does it not look incomplete to anyone else?"
+
+"Things in Nature do not have abruped, sharp ends like we see here." (pointing) "Unless it is cleanly cut by a blade, like the fallen arm stumps we may see in glorious battle."
+
+The group of men mostly looked at the floor and seemed to be pondering this remark further.
+
+At all this, the amount of apparent blindness to the obvious may be striking to you. After all, the Crec were naked an /awful/ lot of the time, seemingly without shame. Some keen students of humanity see this kind of dissonance all the time, even in their own cultures. What one does with this kind of observation is what's important. Rarely is it pointed out recklessly. The sick-monkey way in which humans reinforce this kind of willful social blindness "at all costs" can result in literally violent reactions from anyone forced to see what they /need/ to remain hidden forever.
+
+"Father-Brother Verk, what shall we do with it?", asked one of Verk's Under-Men.
+
+"As a gift to one of the Elder-Quorum's finer charities, it will of course make its way eventually to the Hard-Guard-Cave, but tonight it goes home with me, so I may ender-talk with The Ender and try in my humility to divine his message. Made-Baby-Wife-of-Verk[fn:: See Appendix: 'Language and Naming Surrounding Women'.] and I will ensure it encounters no ill abuse."
+
+"Very good, Father-Brother Verk! Gog and I will package it in the manor in which we did for its movement from the mine. We encountered problems with our first attempt. It seems to have some tricks up its sleeve[fn:: Not having shirt sleeves, the Crec actually use a very similar expression that roughly means, 'magic in my garments'.]."
+
+"You are a fine help.", said Verk, his face expressionless.
+
+The two men, having most matierals already handy, re-secured the egg and its yolk, hanging it from the same well-suited springy tree branch. Hoisting the xxxx over to two of Verk's Under-Men's sholders, who watching Verk's retreat towards the exit, haistily set off in a trot towards xxxx verk's own local hill xxx passing Verk as stopped and turned at the exit.
+
+"Oh, boys.", Verk said with one foot still pointed at the cave's exit way. "See you at club-drill day after tomorrow?" He smiled, showing apparent warmth, placing his hand over the springy mat of white hair over his heart, and pausing for an answer.
+
+"Oh, yes Father-Brother Verk. Grav and I will be there one palm sharp!"
+
+The two men souluted by grabbing their left ankle with their right hand, locking their right knee, straightening and looking straight ahead at infinity with their shoulders square. "With the mind of a ambling-feast in rut, in a blizzard, our Upper-Brother leader Father-Brother Verk! We will be there!"
+
+Gog said this alone as Grav did his best to make broad, sincere eyes. The men had not yet mastered speaking-as-one-in-battle[fn:: The meaning is obvious if you think in terms of the need for soldiors to not only act as one, but to literally think as one. This is a resource that modern humans are almost entirely without. A feirce sense of personal sovrighnty that exists, even in remote, simpler communities of any left-over bit of 'primitive' culture still present in our world, in all modern humans has been a kind of wrench in the works of humanity, but also a great blessing. Humanity took a kind of fork in the cultural progression road, some time long ago. With practice the Crec, any Crec and most tribes known by them at the time could, when under extreeme durress where lives or maybe whole cultures are at stake, literally respond as one to their supperiors, so thorough was military training. One helpful factor, in your defense is that battle lacks a lot of nuance and the overall tasks are few.], which is a practice solders of at least mid-rank were expected to do.
+
+Verk squinted and stepped out into the pink late afternoon.
+
+"Fare well for now, boys!"
+
+]]] Gog needs to carry a hemp bag!
