--- a/001-where.org
+++ b/001-where.org
@@ -468,7 +468,7 @@ All invited were present, introductory remarks made, grateful nods made towards 
 
 Grav and Gog stood smiling awkwardly. The crowd was too small and close for there to be any idea which direction to face. They felt on display as well, with Verk maybe doling out a bit too much praise to keep the boys' sense of obligation sharp.
 
-Verk did a triple-take with a broad, yellow smile for the clan portraitist and anyone else with a keen memory. He pried the two halves apart with a fine, glittering Sky Clam halve[fn:: These were found on the top of nearby /Mnt. Fish/. No one knew how or why.] and a healthy-looking, tough, thick, velvety leaf which he used to protect the parimiter of the mirror-stone finish he had been assured he would find, among other wonders that he insisted remain a surprise.
+Verk did a triple-take with a broad, yellow smile for the clan portraitist and anyone else with a keen memory. He pried the two halves apart with a fine, glittering Sky Clam halve[fn:: These were found on the top of nearby /Mnt. Fish/. No one knew how or why.] and a healthy-looking, tough, thick, velvety leaf which he used to protect the perimeter of the mirror-stone finish he had been assured he would find, among other wonders that he insisted remain a surprise.
 
 The two men had never felt this kind of intense, surreal terror before. Either their predict-thought was correct, and Verk would not /see/ what was there, or he would immediately see a fine, sparkling, extra-large false-rock-stick that would, should such a thing even exist outside of caveboy talk, be hidden carefully under feet of bat-scat in the very back of one's cave[fn:: Which would keep it quite warm, which no one found out.].
 
@@ -482,7 +482,7 @@ The men watched Verk shake his head slowly as they wondered which way this was g
 
 Verk lifted the smooth, clean, glittering brown crystal from its perfect den and held it up with wonder, letting the soft orange of the late afternoon sun coming from the nearby cave opening reveal all of the object's beautiful, strictly bilateral symmetry with the contrasting powers of well-oriented, bright sun.
 
-"It looks like /something/...", wondered Verk aloud. "It cannot be other than a message. To comprehend what Ender's-Nature-Force has revealed to us is of the utmost importance. It is a message to us, to the Crec, straight from Its mouth[fn:: "God" was a more abstract being to the Crec than ours is to modern people. Referring to their 'god' as 'it' is in no way a kind of sacrilidge. It is the pronoun to be used. For, Kug, Great Diviner of Recent Messages said in his youth, 'The Crec God has no rock-stick!'. In other words Ender-of-Questions was genderless and what is more, not thought of as 'caveperson-like' in the least. They would find the idea so humorous that, should you some day be able to inquire about theirs, offering a description of your god's nature, a revealing conversation would likely not be possible. Ender-Of-Questions /does/ have a mouth, though.]."
+"It looks like /something/...", wondered Verk aloud. "It cannot be other than a message. To comprehend what Ender's-Nature-Force has revealed to us is of the utmost importance. It is a message to us, to the Crec, straight from Its mouth[fn:: "God" was a more abstract being to the Crec than ours is to modern people. Referring to their 'god' as 'it' is in no way a kind of sacrilege. It is the pronoun to be used. For, Kug, Great Diviner of Recent Messages said in his youth, 'The Crec God has no rock-stick!'. In other words Ender-of-Questions was genderless and what is more, not thought of as 'caveperson-like' in the least. They would find the idea so humorous that, should you some day be able to inquire about theirs, offering a description of your god's nature, a revealing conversation would likely not be possible. Ender-Of-Questions /does/ have a mouth, though.]."
 
 "Indeed Grav and I thought the same thing.", offered Gog.
 
@@ -490,7 +490,9 @@ Verk turned to Gog, "Young buck you may be wise yet.", and smiled with a wink. T
 
 "Let us pass it around the room! Us Under-Men[fn:: An near analog of the modern Japanese 'kouhai', one's social inferior in some given context, in this particular case the speaker was thinking in terms of their shared military experience and shared love of knowledge.] are thirsting of curiosity."
 
-The small crowd of men in the large burrow took turns handling, admiring, indeed caressing the object. There was many quizzacle raised eyebrows[fn:: Being mostly 'biological hardware' in origin, this gesture means the same to pretty much all of humanity and their cousins.] Some of the men, while holding it, managed to quickly have something to say to their neighbor, causing them to just as quickly pass it along. Some made an admiring smile and gave a sideways nod, with raised eyebrows. Those who decided they had something to contribute to the discussion sometimes missed a beat or two in the animated group conversation's rhythm, and stepping in at not quite the right time, said things like...
+The small crowd of men in the large burrow took turns handling, admiring, indeed caressing the object. There was many quizzical raised eyebrows[fn:: Being mostly 'biological hardware' in origin, this gesture means the same to pretty much all of humanity and their cousins.], asking 'What can we learn from this?'
+
+Some of the men, while holding it, managed to quickly have something to say to their neighbor, causing them to just as quickly pass it along. Some made an admiring smile and gave a sideways nod, with raised eyebrows. Those who decided they had something to contribute to the discussion sometimes missed a beat or two in the animated group conversation's rhythm, and stepping in at not quite the right time, said things like...
 
 "Could it be just the front one piece of four of a kind of viper, perhaps?"
 
@@ -502,7 +504,7 @@ This contributor, smiling and not looking at the crystal, ran his fingers "down"
 
 "Does it not look incomplete to anyone else?"
 
-"Things in Nature do not have abruped, sharp ends like we see here." (pointing) "Unless it is cleanly cut by a blade, like the fallen arm stumps we may see in glorious battle."
+"Things in Nature do not have abrupt, sharp ends like we see here." (pointing) "Unless it is cleanly cut by a blade, like the fallen arm stumps we may see in glorious battle."
 
 The group of men mostly looked at the floor and seemed to be pondering this remark further.
 
@@ -516,15 +518,15 @@ At all this, the amount of apparent blindness to the obvious may be striking to 
 
 "You are a fine help.", said Verk, his face expressionless.
 
-The two men, having most matierals already handy, re-secured the egg and its yolk, hanging it from the same well-suited springy tree branch. Hoisting the xxxx over to two of Verk's Under-Men's sholders, who watching Verk's retreat towards the exit, haistily set off in a trot towards xxxx verk's own local hill xxx passing Verk as stopped and turned at the exit.
+The two men, having most materials already handy, re-secured the egg and its yolk, hanging it from the same well-suited springy tree branch. Hoisting the xxxx over to two of Verk's Under-Men's shoulders, who watching Verk's retreat towards the exit, hastily set off in a trot towards xxxx verk's own local hill xxx passing Verk as stopped and turned at the exit.
 
 "Oh, boys.", Verk said with one foot still pointed at the cave's exit way. "See you at club-drill day after tomorrow?" He smiled, showing apparent warmth, placing his hand over the springy mat of white hair over his heart, and pausing for an answer.
 
 "Oh, yes Father-Brother Verk. Grav and I will be there one palm sharp!"
 
-The two men souluted by grabbing their left ankle with their right hand, locking their right knee, straightening and looking straight ahead at infinity with their shoulders square. "With the mind of a ambling-feast in rut, in a blizzard, our Upper-Brother leader Father-Brother Verk! We will be there!"
+The two men saluted by grabbing their left ankle with their right hand, locking their right knee, straightening and looking straight ahead at infinity with their shoulders square. "With the mind of a rutting ambling-feast, in a great blizzard, our Upper-Brother leader Father-Brother Verk! We will be there!"
 
-Gog said this alone as Grav did his best to make broad, sincere eyes. The men had not yet mastered speaking-as-one-in-battle[fn:: The meaning is obvious if you think in terms of the need for soldiors to not only act as one, but to literally think as one. This is a resource that modern humans are almost entirely without. A feirce sense of personal sovrighnty that exists, even in remote, simpler communities of any left-over bit of 'primitive' culture still present in our world, in all modern humans has been a kind of wrench in the works of humanity, but also a great blessing. Humanity took a kind of fork in the cultural progression road, some time long ago. With practice the Crec, any Crec and most tribes known by them at the time could, when under extreeme durress where lives or maybe whole cultures are at stake, literally respond as one to their supperiors, so thorough was military training. One helpful factor, in your defense is that battle lacks a lot of nuance and the overall tasks are few.], which is a practice solders of at least mid-rank were expected to do.
+Gog said this alone as Grav did his best to make broad, sincere eyes. The men had not yet mastered speaking-as-one-in-battle[fn:: The meaning is obvious if you think in terms of the need for soldiers to not only act as one, but to literally think as one. This is a resource that modern humans are almost entirely without. A fierce sense of personal sovereignty that exists, even in remote, simpler communities of any left-over bit of 'primitive' culture still present in our world, in all modern humans has been a kind of wrench in the works of humanity, but also a great blessing. Humanity took a kind of fork in the cultural progression road, some time long ago. With practice the Crec, any Crec and most tribes known by them at the time could, when under extreme duress where lives or maybe whole cultures are at stake, literally respond as one to their superiors, so thorough was military training. One helpful factor, in your defense is that battle lacks a lot of nuance and the overall tasks are few.], which is a practice solders of at least mid-rank were expected to do.
 
 Verk squinted and stepped out into the pink late afternoon.
 
