--- a/001-where.org
+++ b/001-where.org
@@ -82,7 +82,7 @@ Grav knew from experience that one had to pretty much shout over the thunder of 
 
 All this angry water out of place created a truly odd and kind of magical Forest-shaking, low rumble that was something like an earthquake that has been ongoing for thousands of years. The dirt doesn't mind. It just gets shaken about. And it turns out plants didn't mind it either, or as many suspect, were just a bit more productive because of the light massage. The occasional tree here and there didn't move visibly, but a hand on the trunk would bring your mind back to the power around you. Trees, and rocks and whatever else hummed harmonically, which added some color to the sea of white noise in the area. Gog had once put a straight, hard, ridged stick hard against a boulder near one of the more dramatic cascades. Putting his ear up to the other end, he could definitely hear an /audible/ hum that was clear and distinct from the surrounding tempest of noise.
 
-Shouting, Grav suggested, "Whatever we do, let's get the scat downstream!"
+Grav handed the heavier of the baskets to Gog. He shouted, "Whatever we do, let's get the scat downstream!"
 
 Gog nodded, turned, and led the way.
 
@@ -530,6 +530,4 @@ Gog said this alone as Grav did his best to make broad, sincere eyes. The men ha
 
 Verk squinted and stepped out into the pink late afternoon.
 
-"Fare well for now, boys!"
-
-]]] Gog needs to carry a hemp bag!
+"Farewell for now, boys!" Verk strutted out of the cage with that energetic "walking uphill" look, with exaggerated arm swings, that unmentionably fat cavemen have.
