--- a/000-preface.org
+++ b/000-preface.org
@@ -7,7 +7,7 @@ You will have seen the movie. They do wear minimal animal hide clothing. Wouldn'
 
 They do in fact live in caves. Most of your Hollywood stereotypes are based on what regular, modern humans would invent or do to solve some particular problem, say for a screenplay, given only nature's resources; and that is what the Crec do also, unsurprisingly. It's no wonder regular people converge on many of the same solutions over and over again. That's why, say for example, unavoidably having to club a loved one over the head is in fact required on rare occasions. And have you ever tried to get out of the way of an enraged mother baboon? Sometimes you just grab a handful of hair and run for your life. Yes, there is clubbing. And dragging by the hair.
 
-Clever analogs to modern vehicles? No, sadly, but warm, furry backs abound (They do ride animals which they domesticate, to a degree.) However, the distribution of tall, rather neat and symmetrical palm trees, and the way the verge of the nearby lagoon is here and there carpeted with some strikingly uniform and very green grass is just as you are thinking. There /are/ saber-toothed tigers. There are also rather furry (and rather smelly) rhinoceros. It's rather beautiful. The Crec are aware, just as you are, that there is such a thing as timeless beauty.
+Clever analogs to modern vehicles? No, sadly, but warm, furry, if mangey backs abound (They do ride animals which they domesticate, to a degree.) However, the distribution of tall, rather neat and symmetrical palm trees, and the way the verge of the nearby lagoon is here and there carpeted with some strikingly uniform and very green grass is just as you are thinking. There /are/ saber-toothed tigers. There are also rather furry (and rather smelly) rhinoceros. It's rather beautiful. The Crec are aware, just as you are, that there is such a thing as timeless beauty.
 
 We will get to dinosaurs. It's complicated.
 
