--- a/000-preface.org
+++ b/000-preface.org
@@ -84,7 +84,7 @@ As some of you know, I had a modest part to play in The Battle of the Snake-Meal
 There was a practiced gasp of wonder from the audience.
 #+begin_quote
 
-The Smash Heard 'round the Forest, as you know, marked its start, as a Clorp soldier laying in wait smashed the great melon helmet right off of a devoted hero who was guarding our position at Rhino-Scat Hill."
+/The Smash Heard 'round the Forest/, as you know, marked its start, as a Clorp soldier laying in wait smashed the great melon helmet right off of a devoted hero who was guarding our position at Rhino-Scat Hill."
 
 What tipped us off was the crack of his sturdy-gourd-hat splitting in two. I just barely saved his life. From within the our tactical-burrow we could hear the shouts of the hated Clorp coming our way.
 
