--- a/000-preface.org
+++ b/000-preface.org
@@ -84,9 +84,9 @@ As some of you know, I had a modest part to play in The Battle of the Snake-Meal
 There was a practiced gasp of wonder from the audience.
 #+begin_quote
 
-/The Smash Heard 'round the Forest/, as you know, marked its start, as a Clorp soldier laying in wait smashed the great melon helmet right off of a devoted hero who was guarding our position at Rhino-Scat Hill."
+/The Smash Heard 'round the Forest/, as you know marked its start, as a Clorp soldier laying in wait smashed the great melon helmet right off of a devoted hero who was guarding our position at Rhino-Scat Hill."
 
-What tipped us off was the crack of his sturdy-gourd-hat splitting in two. I just barely saved his life. From within the our tactical-burrow we could hear the shouts of the hated Clorp coming our way.
+What tipped us off was the crack of his sturdy-gourd-hat splitting in two. I just barely saved his life. From within our tactical-burrow we could hear the shouts of the hated Clorp coming our way.
 
 #+end_quote
 Audience members dutifully make faces of disgust at the mention of the name.
@@ -98,7 +98,7 @@ It seemed like in no time at all the Clorp were climbing up the scree of Rhino-S
 Measured gasp from the audience.
 #+begin_quote
 
-We were the defenders, which favors one in battle. They had to do all the slow and treacherous scurrying. We just had to lob rocks down on them. But their number was great, as I mentioned, and soon we were quite literally running low on rocks[fn:: There having been a strike among the ammunition suppliers (they carry rocks up hill), resources ran low off and on through out Snake-Meal. The strikers supplied their last delivery in the form of their heads.].
+We were the defenders, which favors one in battle. They had to do all the slow and treacherous scurrying. We just had to lob rocks down on them. But their number was great, as I mentioned, and soon we were quite literally running low on rocks[fn:: There having been a strike among the ammunition suppliers (they carry rocks up hill), resources ran low off and on throughout Snake-Meal. The strikers supplied their last delivery in the form of their heads.].
 
 Just then, my pal Lu and I realized that almost none of the troops were allowed to know about the boulder-rhino up at the top! We looked at each other seemingly at the same time and both had the idea at the same time. "Are you thinking what I'm thinking?", I said. "/Let's go!/", said Lu.
 
