--- a/000-preface.org
+++ b/000-preface.org
@@ -104,7 +104,7 @@ Just then, my pal Lu and I realized that almost none of the troops were allowed 
 
 There it was after a gasping, wheezing sprint up the steep hillside, our "secret" weapon. Why it was kept secret to most of /our guys/ I still do not know to this day. It was complete alright, and pointed in exactly the right direction. Lu starts talking to me about which one of us is going to out there to the verge and give their life by dislodging the required stones, there not in that day being the idea yet of just tying some sturdy twist-vine to it and giving a pull from a safe distance.
 
-I had spied something on the way up and decided to have one over on old Lu. I say, 'well by rights, Lu, even as my friend, you need to be the one to go out there and do this. You know I got a family to support and my new position at camp comes with a lot of responsibility, one that there just ain't a lot of good replacements for. You think for a minute about what old Corporal Bogh would say in this situation. I'm sorry Lu, but I'm thinking of the Forest here. My hand to Ender-Of-All-Questions, this is my thinking, Lu. I'm sorry. I'll hear you out my friend, but...
+I had spied something on the way up and decided to have one over on old Lu. I say, "Well by rights, Lu, even as my friend, you need to be the one to go out there and do this. You know I got a family to support and my new position at camp comes with a lot of responsibility, one that there just ain't a lot of good replacements for. You think for a minute about what old Corporal Bogh would say in this situation. I'm sorry Lu, but I'm thinking of the Forest here. My hand to Ender-Of-All-Questions, this is my thinking, Lu. I'm sorry. I'll hear you out my friend, but..."
 
 We could see clearly that the Clorp were making ground, slowly. It looked like a great storm of people. Vast, like waves of blood an people washing up against the shores of Rhino-Scat. We had indeed gotten lost in time a bit about the urgency of our mission. The sight was awesome.
 
@@ -114,7 +114,7 @@ An inexplicable snicker from a younger Crec was shushed by his mother.
 
 /I/ apparently had, anyhow. But it's a memory me and Lu share fondly as we became real Crec /men/ by stages over the many moons of suffering in battle.
 
-Having cleared my head and realizing I was in the middle of some unnecessary nonsense, I let him sit on my proposal for just a short while and was just about to let him in on it, but just then he got choked up a bit and stiffened and said, 'Private Verk, sir! It has been a privilege fighting for our home, this Forest along side with you. Friend.'
+Having cleared my head and realizing I was in the middle of some unnecessary nonsense, I let him sit on my proposal for just a short while and was just about to let him in on it, but just then he got choked up a bit and stiffened and said, "Private Verk, sir! It has been a privilege fighting for our home, this Forest along side with you. Friend."
 
 I saw a tear forming so I figured I should get a move on. Did I mention I was in a hurry now?
 
@@ -122,7 +122,7 @@ I saw a tear forming so I figured I should get a move on. Did I mention I was in
 Laugher.
 #+begin_quote
 
-'Lu!', I says, 'Lu I was just having a go at ya pal! I spied a stick on the way up that should be long enough. I'll go back and fetch it! You shoulda seen your face!'
+"Lu!", I says, "Lu I was just having a go at ya pal! I spied a stick on the way up that should be long enough. I'll go back and fetch it! You shoulda seen your face!"
 
 I ran not 60 paces and fetched the stick, and was back in a jiffy.
 
@@ -131,7 +131,7 @@ Lu and I heaved and heaved and oh how that little tree's trunk bent and bent. My
 Brfgf. Bugrgl. Bunjle. Brrrkk.
 
 #+end_quote
-Verk, in his way, was trying to make sound of a thousand mighty boulders on their way to smite.
+Verk, in his way, was trying to make sound of a thousand mighty boulders on their way to smite the enemy.
 #+begin_quote
 
 I mean these things come crashing down, leveling everything! There were trees a man around that were not just snapped, they were sheered off at the surface, after which their roots were pounded into pulp. The land on that side of the hill is still good for working to this day, and it was only known as Morning-sun-left-side Rhino-Scat Woods before that. And a woods it was.
