--- a/000-preface.org
+++ b/000-preface.org
@@ -126,7 +126,7 @@ Laugher.
 
 I ran not 60 paces and fetched the stick, and was back in a jiffy.
 
-Lu and I heaved and heaved and oh how that little tree's trunk bent and bent. My hands were shaking. Lu's hands were shaking still more. All at once, we heard a rumble. We didn't see any of the stay boulders move before we heard it. It was like The Army of Ender-Of-All-Questions himself was at full charge! Coming to save the day!
+Lu and I heaved and heaved and oh how that little tree's trunk bent and bent. My hands were shaking. Lu's hands were shaking still more. All at once, we heard a rumble. We didn't see any of the stay boulders move before we heard it. It was like The Army of Ender-Of-All-Questions itself was at full charge! Coming to save the day!
 
 Brfgf. Bugrgl. Bunjle. Brrrkk.
 
