--- a/001-where.org
+++ b/001-where.org
@@ -474,7 +474,7 @@ The two men had never felt this kind of intense, surreal terror before. Either t
 
 Verk grunted the desperate grunt of the soon-dying and heaved the top halve upward, balancing on the bottom, thick end of the "egg". The top halve slid slightly to warn of its instability. Gog and Grav each picked up the fatter, heavier half, one on each side, and the three men walked it over to one side, setting it down on a blanket of fresh leaves. Gog could see the revealed form, while Grav was walking his share of the heavy half of the egg along, with his head turned, but both men felt the same hopeless terror combined with an oddly sweet giddiness.
 
-"My sweet Ender-Of-Questions, in his hammock above!", Verk covered his open mouth with the fingertips of both hands in a somewhat dainty gesture, and smiled warmly. "It is /astonishing/.", stretching the syllables.
+"My sweet Ender-Of-Questions, in its hammock above!", Verk covered his open mouth with the fingertips of both hands in a somewhat dainty gesture, and smiled warmly. "It is /astonishing/.", stretching the syllables.
 
 The men watched Verk shake his head slowly as they wondered which way this was going.
 
