--- a/000-preface.org
+++ b/000-preface.org
@@ -124,9 +124,9 @@ Laugher.
 
 "Lu!", I says, "Lu I was just having a go at ya pal! I spied a stick on the way up that should be long enough. I'll go back and fetch it! You shoulda seen your face!"
 
-I ran not 60 paces and fetched the stick, and was back in a jiffy.
+I ran not one half of boulder-door men[fn:: About 300 ft. See Appendix "Numeric Reckoning".] back down the trail and fetched the stick, and was back in a jiffy.
 
-Lu and I heaved and heaved and oh how that little tree's trunk bent and bent. My hands were shaking. Lu's hands were shaking still more. All at once, we heard a rumble. We didn't see any of the stay boulders move before we heard it. It was like The Army of Ender-Of-All-Questions itself was at full charge! Coming to save the day!
+Lu and I heaved and heaved and oh how that little tree's trunk bent and bent. My hands were shaking. Lu's hands were shaking still more. All at once, we heard a rumble. We hadn't even seen any of the stay boulders move a bug before we heard it. It was like The Army of Ender-Of-All-Questions itself was at full charge! Coming to save the day!
 
 Brfgf. Bugrgl. Bunjle. Brrrkk.
 
