--- a/000-preface.org
+++ b/000-preface.org
@@ -134,7 +134,7 @@ Brfgf. Bugrgl. Bunjle. Brrrkk.
 Verk, in his way, was trying to make sound of a thousand mighty boulders on their way to smite the enemy.
 #+begin_quote
 
-I mean these things come crashing down, leveling everything! There were trees a man around that were not just snapped, they were sheered off at the surface, after which their roots were pounded into pulp. The land on that side of the hill is still good for working to this day, and it was only known as Morning-sun-left-side Rhino-Scat Woods before that. And a woods it was.
+I mean these things come crashing down, leveling everything! There were trees a man around that were not just snapped, they were sheered off at the floor, after which their roots were pounded into pulp. The land on that side of the hill is still good for working to this day, and it was only known as Morning-sun-left-side Rhino-Scat Woods before that. And a woods it was.
 
 Then the rhino started meeting up with the men... and the Clorp.
 
